update equals method